# MKD

./: .gitignore  AGENTS.md  CITATION.cff  DATASET.md  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: default.yaml  pcqm4mv2_100k.yaml  pcqm4mv2_1d2d3d_text.yaml  pcqm4mv2_1d2d_text.yaml  pcqm4mv2_full.yaml  smoke.yaml
data/example/: data.csv  llm_text.csv
scripts/: create_pcqm4mv2_subset.py  inspect_pcqm4mv2_sdf.py  run_experiment.py  train_mkd.py  train_teachers.py
src/mkd_mpp/: __init__.py  config.py  data.py  pcqm4mv2.py
src/mkd_mpp/models/: __init__.py  encoders.py  mkd.py
src/mkd_mpp/training/: __init__.py  losses.py  trainer.py
tests/: test_imports.py
