[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mkd-mpp"
version = "0.1.0"
description = "MKD: Multimodal Knowledge Distillation For Molecular Property Prediction."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "MKD-MPP Contributors" }
]
keywords = ["molecular-property-prediction", "multimodal-learning", "knowledge-distillation", "chemberta", "graph-neural-network"]
dependencies = [
  "torch>=2.1",
  "numpy>=1.24,<2",
  "pandas>=2.0",
  "scipy>=1.10",
  "pyyaml>=6.0",
  "tqdm>=4.66",
  "ogb>=1.3.6",
  "rdkit>=2023.9",
  "torch-geometric>=2.5",
  "transformers>=4.41",
  "tokenizers>=0.19",
  "hf_xet>=1.1"
]

[project.optional-dependencies]
molecular = []
dev = [
  "pytest>=8.0",
  "ruff>=0.5"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"
